test/files/neg/t6597.scala
object Test {
  trait T extends Any
  implicit case class Quux(value: Int) extends AnyVal with T
  object Quux
}
